--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 GOOGLE_ID = 521299985175-ga4h32t6daskronfclo0oof3nd0ulvfv.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET = 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
 MONGODB_URI = mongodb+srv://amrit:l9EAJLCP339nx0Xv@cluster0.si4y1mb.mongodb.net/?retryWrites=true&w=majority
+
+NEXTAUTH_URL = http://localhost:3000
+NEXTAUTH_URL_INTERNAL = http://localhost:3000
+NEXTAUTH_SECRET = Dk9AcoZCHx5IfVTvmMfpAb33ZazvegWXjVY+SJ2rTDY=
